does some critical changes to the whole tracker programm. e.g. substitutes arrays to Array lists. changes tests as well.